@@ -1,3 +1,9 @@
+2003-05-15 Baptiste Lepilleur <gaiacrtn@free.fr>
+
+  * include/cppunit/config/config-msvc6.h: changed the compiler outputter 
+    default format (CPPUNIT_COMPILER_LOCATION_FORMAT) for Visual Studio 7.0.
+    Assertion now appears in the task list.
+
 2003-05-07 Baptiste Lepilleur <gaiacrtn@free.fr>
 
   * include/cppunit/extensions/Makefile.am: removed TestSuiteBuilder.h
